# ltp

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt
android/example/: MainActivity_DeploymentExample.java
src/ltp/: LTPResource.h  Ltp.cpp  Ltp.h  LtpNDPCK.cpp  LtpNDPCK.h  ltp-jni.cpp
src/ner/: CMakeLists.txt
src/parser.n/: CMakeLists.txt
src/postagger/: CMakeLists.txt
src/segmentor/: CMakeLists.txt
src/server/: CMakeLists.txt  ltp_server.cpp
src/splitsnt/: CMakeLists.txt
src/srl/: CMakeLists.txt  DepSRL.cpp  DepSRL.h  FeatureExtractor.cpp  FeatureExtractor.h  SRLBaselineExt.cpp  SRLBiLSTMModel.cpp  SRLBiLSTMModel.h  SRLLookUpTable.cpp  SRLLookUpTable.h  SRLSyntacticFeature.cpp  SRLSyntacticFeature.h  SRL_DLL.cpp  Sentence.h  TrainSRLTest.cpp  srltest.cpp  strutils.h  testMain.cpp  trainStn.cpp  trainStn.h
src/utils/: logging.hpp
src/xml4nlp/: Xml4nlp.h
